--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "scripts": {
     "test": "playwright-test test/specification/test1.js --runner mocha --watch",
     "bench": "playwright-test test/benchmark/bench1.js --runner benchmark",
-    "build": "node esbuild.mjs"
+    "build": "node esbuild.mjs",
+    "build-watch": "concurrently --kill-others \"node esbuild.mjs watch\" \"npm run test\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chai": "^4.3.7",
+    "concurrently": "^7.6.0",
     "esbuild": "0.17.11",
     "mocha": "^10.2.0",
     "playwright-test": "^8.2.0"
