--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,20 +2,18 @@
     "editor.defaultFormatter": null,
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
+    "editor.detectIndentation": true,
     "[typescript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true,
-        "editor.detectIndentation": false
+        "editor.formatOnSave": true
     },
     "[javascript]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true,
-        "editor.detectIndentation": false
+        "editor.formatOnSave": true
     },
     "[markdown]": {
         "editor.defaultFormatter": "esbenp.prettier-vscode",
-        "editor.formatOnSave": true,
-        "editor.detectIndentation": false
+        "editor.formatOnSave": true
     },
     "files.exclude": {
         "**/node_modules": true
