--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,4 +21,9 @@
     "prettier.singleQuote": true,
     "prettier.proseWrap": "always",
     "prettier.arrowParens": "avoid",
+    "cSpell.words": [
+        "immer",
+        "instanceof",
+        "typeof"
+    ],
 }
