--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,6 +22,7 @@
     "prettier.proseWrap": "always",
     "prettier.arrowParens": "avoid",
     "cSpell.words": [
+        "btld",
         "immer",
         "instanceof",
         "typeof"
