--- a/.build/package.json
+++ b/.build/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@btld/build",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
   "author": "",
   "license": "ISC",
   "bin": {
-    "btld-build-literate": "./build-literate"
+    "literate": "./build-literate.mjs"
   }
 }
