--- a/.build/package.json
+++ b/.build/package.json
@@ -11,6 +11,7 @@
     "chokidar": "^3.5.3",
     "commander": "^10.0.1",
     "esbuild": "0.17.11",
+    "glob": "^10.2.2",
     "minimist": "^1.2.8",
     "playwright-test": "^8.2.0",
     "typescript": "^5.0.4"
