--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "literate": "npx -p ./.build -y build literate",
+    "cli": "npx -p ./.build -y build",
+    "unittest": "npm run cli -- unittest src/1-base-store.md --watch",
     "Todo--------------": "",
     "literate-w": "npm run literate -- --watch",
     "types": "npm run literate && tsc -p build",
