--- a/package.json
+++ b/package.json
@@ -20,7 +20,14 @@
   },
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "workspaces": [
+    ".build"
+  ],
+  "dependencies": {
+    "@btld-web/build": "*",
+    "@types/chai": "^4.3.5",
+    "@types/minimist": "^1.2.2",
+    "@types/mocha": "^10.0.1",
     "chai": "^4.3.7",
     "chokidar": "^3.5.3",
     "concurrently": "^7.6.0",
@@ -28,11 +35,6 @@
     "minimist": "^1.2.8",
     "mocha": "^10.2.0",
     "playwright-test": "^8.2.0",
-    "typescript": "^5.0.4",
-    "@types/minimist": "^1.2.2",
-    "@btld-web/build": "*"
-  },
-  "workspaces": [
-    ".build"
-  ]
+    "typescript": "^5.0.4"
+  }
 }
