--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cli": "npx -p ./.build -y build",
     "unittest": "npm run cli -- unittest src/1-base-store.md --watch",
-    "types": "npm run literate && tsc -p build",
+    "literate": "npm run cli -- literate src/1-base-store.md",
     "test": "playwright-test test/specification/*.js --runner mocha --watch",
     "bench": "playwright-test test/benchmark/bench1.js --runner benchmark"
   },
