--- a/src/server/docker-compose.yml
+++ b/src/server/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       context: .
       dockerfile: express.Dockerfile
     volumes:
-      - ./:/usr/app
+      - ~/btld-web/src/server/:/usr/app
     container_name: btld-express-server
     ports:
         - "4000:4000"
