--- a/@btld-web/server/docker-compose.yml
+++ b/@btld-web/server/docker-compose.yml
@@ -1,8 +1,6 @@
 version: "3"
 services:
   express:
-    environment:
-      - NODE_ENV=development
     build:
       context: .
       dockerfile: express.Dockerfile
@@ -12,3 +10,13 @@ services:
     volumes:
       - ~/btld-web/@btld-web/server/:/usr/app/server
     command: npm run express
+  hocuspocus:
+    build:
+      context: .
+      dockerfile: hocuspocus.Dockerfile
+    container_name: btld-hocuspocus-server
+    ports:
+      - "4001:4001"
+    volumes:
+      - ~/btld-web/@btld-web/server/:/usr/app/server
+    command: npm run hocuspocus
