--- a/@btld-web/server/package.json
+++ b/@btld-web/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "express": "node express.mjs"
+    "express": "node express.mjs",
+    "hocuspocus": "node hocuspocus.mjs"
   },
   "author": "",
   "license": "ISC",
