--- a/@btld-web/server/docker-compose.yml
+++ b/@btld-web/server/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - ~/btld-web/@btld-web/server/:/usr/app/project
     command: npm run express
     networks:
-      - shared_net
+      - server-net
   hocuspocus:
     build:
       context: .
@@ -23,7 +23,7 @@ services:
       - ~/btld-web/@btld-web/server/:/usr/app/project
     command: npm run hocuspocus
     networks:
-      - shared_net
+      - server-net
   build-editor:
     build:
       context: ../..
@@ -33,5 +33,6 @@ services:
       - ~/btld-web/:/usr/app/project
     command: npm run build-editor
 networks:
-  shared_net:
-    name: shared_network
+  server-net:
+    external:
+      name: install_default 
