--- a/@btld-web/server/package.json
+++ b/@btld-web/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@hocuspocus/server": "^2.0.6",
-    "express": "^4.18.2"
+    "docker-secret": "^2.0.6",
+    "express": "^4.18.2",
+    "nodemailer": "^6.9.3"
   }
 }
