--- a/@btld-web/server/docker-compose.yml
+++ b/@btld-web/server/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     container_name: btld-web-build-editor
     volumes:
       - ~/btld-web/:/usr/app/project
-    command: npm run build-editor
+    command: npm run build -w @btld-web/editor
 networks:
   server-net:
     external:
