--- a/@btld-web/server/docker-compose.yml
+++ b/@btld-web/server/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     ports:
       - "127.0.0.1:4000:4000"
     volumes:
-      - ~/btld-web/@btld-web/server/:/usr/app/project
-    command: npm run express
+      - ~/btld-web/:/project
+    command: npm run express -w @btld-web/service
     networks:
       - server-net
     secrets:
@@ -25,8 +25,8 @@ services:
     ports:
       - "127.0.0.1:4001:4001"
     volumes:
-      - ~/btld-web/@btld-web/server/:/usr/app/project
-    command: npm run hocuspocus
+      - ~/btld-web/:/project
+    command: npm run hocuspocus -w @btld-web/service
     networks:
       - server-net
   build-editor:
@@ -35,7 +35,7 @@ services:
       dockerfile: node.Dockerfile
     container_name: btld-web-build-editor
     volumes:
-      - ~/btld-web/:/usr/app/project
+      - ~/btld-web/:/project
     command:
       - /bin/sh
       - -c
