--- a/@btld-web/server/docker-compose.yml
+++ b/@btld-web/server/docker-compose.yml
@@ -48,9 +48,11 @@ services:
     image: postgres
     restart: always
     ports:
-      - "5432:5432"
+      - "127.0.0.1:5432:5432"
     volumes:
       - /data/pg_data:/var/lib/postgresql/data
+    networks:
+      - server-net
     environment:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -63,6 +65,8 @@ services:
       - /data/pg_admin:/var/lib/pgadmin
     ports:
       - "5050:80"
+    networks:
+      - server-net
     environment:
       PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL}
       PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD}
