--- a/@btld-web/server/package.json
+++ b/@btld-web/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "express": "node express.mjs",
-    "hocuspocus": "node hocuspocus.mjs"
+    "hocuspocus": "node hocuspocus.mjs",
+    "build-email": "npx mjml emails/webinar-invitation.mjml -o emails/webinar-invitation.html"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +14,7 @@
     "@hocuspocus/server": "^2.0.6",
     "docker-secret": "^2.0.6",
     "express": "^4.18.2",
+    "mjml": "^4.14.1",
     "nodemailer": "^6.9.3"
   }
 }
