--- a/@btld-web/server/config.env
+++ b/@btld-web/server/config.env
@@ -1,9 +1,8 @@
-POSTGRES_USER=root
-POSTGRES_DB=btld_web_db
-POSTGRES_PASSWORD=
 CLOUDFLARE_EMAIL=
 CLOUDFLARE_KEY=
 CLOUDFLARE_ZONE=
 MAIL_USER=
 MAIL_SERVICE=Gmail
-MAIL_PW=
+MAIL_PASSWORD=
+COUCHDB_USER=admin
+COUCHDB_PASSWORD=YOURPASSWORD
